# edfplus

./: .gitignore  Cargo.toml  FUNCTIONALITY_COMPARISON.md  LICENSE  README.md  README.zh-CN.md
.github/workflows/: deploy-doc.yml
examples/: Cargo.toml  README.md  annotation_best_practices.rs  annotation_test.rs  basic_example.rs  debug_annotations.rs  debug_edf_reader.rs  debug_edge_cases.rs  debug_file_structure.rs  debug_precision_test.rs  debug_quick_parse.rs  debug_signal_detection.rs  debug_tal_count.rs  debug_tal_detailed.rs  debug_tal_parsing.rs  debug_tal_parsing_test.rs  debug_tal_step_by_step.rs  debug_validation.rs  detailed_read_example.rs  generate_test_file.rs  multi_channel_eeg.rs  performance_test.rs  streaming_write_example.rs  test_annotation_reading.rs  verify_multi_channel.rs
src/: doctest_utils.rs  error.rs  lib.rs  reader.rs  types.rs  utils.rs  writer.rs
tests/: annotation_tests.rs  integration_tests.rs  streaming_tests.rs
