[package]
name = "edfplus"
version = "0.1.0"
edition = "2021"
authors = ["Horned_Axe <horned_axe@proton.me>"]
description = "A pure Rust implementation of EDF+ file format reader/writer"
license = "BSD-3-Clause"
repository = "https://github.com/2986002971/edfplus"
homepage = "https://github.com/2986002971/edfplus"
documentation = "https://2986002971.github.io/edfplus/edfplus/"
keywords = ["edf", "signal-processing", "eeg", "medical", "biosignal"]
categories = ["science", "parser-implementations"]
readme = "README.md"

# 排除不需要的文件
exclude = [
    ".github/**/*",
    "target/**/*",
    "*.edf",
    "*.bdf",
    ".gitignore",
]

# 包含 examples（推荐！）
include = [
    "src/**/*",
    "examples/*",
    "tests/**/*",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
]

# 优化配置
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dependencies]
thiserror = "1.0"
chrono = { version = "0.4", default-features = false, features = ["std"] }
